assets/css/style.css
/*----Colors */


header {
  background-color: #8DB2B9;
}

.nav-background {
  background-color: #8DB2B9;
}

footer {
  background-color: #8DB2B9;
}

a:hover {
  color: #800000;
}

.buy-poetry i {
  color: #800000;
}

.newsletter-icon {
  color: #800000;
}

.bookshop-links a:hover {
  color: #800000;
}

li a i:hover {
  color: #252D41;
}

.social-icon i {
  color: #800000;
}

.nav-icon {
  color: #800000;
}

.gallery-background {
  background-color: #252D41;
}

.poetry-background {
  background-color: #DBF3FD63;
}

.contact-email {
  color: #E5E8F0;
}

.contact-email:hover {
    color: #8DB2B9;
}


/*----General Styles */
body {
  margin: 0;
  padding: 0;
}

p {
  font-family: Open sans, sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

h1 {
  visibility: hidden;
  font-size: 3px;
}

h2 {
  font-family: Trocchi, sans-serif;
  font-size: 30px;
  font-style: italic;
  color: #E5E8F0;
}

h3 {
  font-family: Open sans, sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  color: #8DB2B9;
}

h4 {
  font-family: Arial, sans-serif;
  color: #252D41;
}

.quote-position {
  padding-left: 30%;
}

/*----Header */

.row {
  margin: 0px;
}

.header-height {
    height: 140px;
}

.nav-position ul {
  padding: 40px 50px;
  margin: 0px;
}

.logo {
  height: 59px;
  width: 180px;
  padding-top: 45px;
  padding-left: 55px;
}

.nav-button {
  font-family: Arial, sans-serif;
  font-size: 20px;
  text-align: center;
  padding: 2px 30px;
  background-color: #E5E8F0;
  border-radius: 25px;
}

ul {
  display: flex;
  flex-wrap: wrap;
}

li .nav-button {
  margin-left: 3%;
}

li {
  float: left;
  list-style-type: none;
  font-family: Arial, sans-serif;
  font-size: 20px;
}

a {
  padding: 10px;
  color: black;
}

.icon {
  font-size: 30px;
  color: #800000;
}

/*----Footer*/


footer {
  height: 175px;
  margin: 0px;
  position: relative;
  padding-bottom: 0px;
}

.footer-padding {
    padding-top: 3%;
}

.social-background {
  background-color: #8DB2B9;
  margin-bottom: 0%;
  padding: 2% 0% 0% 7%;
}

.buy-poetry {
  padding-left: 25%;
  padding-bottom: 0%;
}

.subscribe-newsletter {
  padding-left: 15%;
}

.newsletter-button {
  background-color: #800000;
  color: #f5f4f4;
  font-family: Arial, sans-serif;
  font-size: 18px;
  position: relative;
}

.form-border {
  border-top: none;
  border-right: none;
  border-left: none;
  background-color: #8DB2B9;
  font-family: Arial, sans-serif;
  font-size: 18px;
  padding-top: 2%;
}

/*----Homepage */
.home-banner {
  background-image: url(../images/galway-banner.jpg);
  background-position: center bottom;
  background-size: cover;
  background-repeat: no-repeat;
  height: 450px;
  width: 100%;
  margin: 0;
}

.quote-background {
  background-color: #800000;
  position: relative;
}

.quote-box-size {
  padding: 5% 1% 5% 2%;
  position: relative;
}

.gallery-size {
  height: 500px;
  width: 500px;
  object-fit: cover;
}

.gallery-size:hover {
  filter: brightness(0.5);
}

.image-position {
  padding: 40px 40px 40px 40px;
  width: 100%;
}

.gallery-caption {
  text-align: center;
}

.bottom-padding {
  padding-bottom: 10%;
}


/*----About Page */

.about-size {
  padding: 7% 15% 5% 15%;
}

.faq-size {
  padding: 2% 15% 7% 15%;
}

.faq-btn {
  background-color: #252D41;
}

.faq-font {
  font-family: Arial, Helvetica, sans-serif;
  color: #8DB2B9;
}
/*----Poem Page */

.galway-po {
  padding: 0% 0% 8% 40%;
}

h3.poetry-title {
  color: #800000;
  font-weight: 700;
}

h3.bio-title {
  color: #800000;
  font-weight: 700;
  font-size: 18px;
}

.image-position-po {
  padding: 5% 10% 5% 10%;
  width: 100%;
}

.image-position-bio {
  padding: 2% 5% 20% 25%;
  width: 75%;
}

.bio {
  padding-right: 10%;
}

/*----Contact Page */
.form-font {
  font-size: 16px;
  font-family: Open sans, sans-serif;
  font-weight: 600;
  text-transform: none;
  color: #8DB2B9;
}

.contact-form {
  padding: 5% 0% 5% 10%;
}

.contact-us {
  padding: 8% 10% 0% 10%;
}

.label-display {
    display: block;
}

.label-width {
    width: 432px;
}

p.contact-font {
    font-family: Arial, Helvetica, sans-serif;
    color: #E5E8F0;
}

/*-----Shop Page */

.shop-image {
    max-height: 500px;
    max-width: 550px;
    padding-top: 75px;
    padding-left: 50px;
}

.shop-text {
  padding-top: 5%;
  padding-left: 25%;
}

.shop-button {
  padding: 2% 0% 15% 25%;
}

/*----Media Queries */

@media screen and (max-width: 1024px) {

    header {
        height: 155px;
    }

    .nav-position ul {
        padding-top: 25px;
    }

  .mobile-bottom-padding {
    padding-bottom: 0%;
  }

  .quote-position {
    padding-left: 5%;
  }

  .mobile-gallery {
      position: inherit;
  }

  .footer-padding {
      padding-top: 2%;
  }

  .newsletter-button {
    font-size: 16px;
    padding: 1%;
  }

  .newsletter-mobile {
    padding-left: 35%;
  }

  .footer-form-mobile {
    padding-left: 35%;
    padding-top: 2%;
    padding-bottom: 2%;
  }

  .buy-poetry {
    padding-left: 40%;
  }

  .bookshop-links {
    padding-left: 35%;
  }

  .social-footer-mobile {
    padding-left: 35%;
    padding-top: 0%;
  }

}

@media screen and (max-width: 1023px) {
  .mobile-nav {
    padding: 15% 0% 0% 40%;
  }

  .nav-position {
    padding: 17% 0% 0% 40%;
    margin: 0%;
  }

  .nav-position ul {
    background-color: #8DB2B9;
  }

  .mobile-logo-pos {
    height: 75px;
    padding: 2% 0% 5% 5%;
  }

  footer {
    height: 220px;
  }

  .newsletter-button {
    font-size: 16px;
    padding: 1%;
  }

  .newsletter-mobile {
    padding-left: 18%;
  }

  .footer-form-mobile {
    padding-left: 10%;
    padding-top: 2%;
    padding-bottom: 2%;
  }

  .buy-poetry {
    padding-left: 10%;
  }

  .bookshop-links {
    padding-left: 15%;
  }

  .social-footer-mobile {
    padding-left: 30%;
    padding-top: 3%;
  }

  .newsletter-tablet-pos {
    padding-top: 2%;
    padding-right: 4%;
  }

  .links-tablet-pos {
    padding-right: 8%;
    padding-top: 2%;
  }

  .mobile-banner {
    background-image: url(../images/galway-banner2.jpg);
    background-position: center center;
    background-size: cover;
    height: 300px;
    width: 100%;
  }

  .quote-box-size {
    padding: 7%;
  }

  h2 {
    font-size: 20px;
  }

  h3 {
    font-size: 18px;
  }

  h4 {
    font-size: 16px;
  }

  p {
    font-size: 16px;
  }

  .mobile-gallery {
    max-height: 200px;
    max-width: 90%;
    padding: 5%;
    margin: 0%;
  }

  .gallery-caption {
    overflow: auto;
    text-align: center;
  }

  .mobile-caption {
    max-width: 88%;
  }

  .galway-po {
    padding: 5% 0% 5% 5%;
  }

  .contact-form {
    flex-direction: column-reverse;
    padding-right: 10%;
  }

  .contact-us {
    padding-bottom: 10%;
  }
}

@media screen and (max-width: 736px) {

    header {
        height: 145px;
    }

  .galway-po {
    padding-left: 25%;
    padding-bottom: 0%;
  }

  .mobile-image-po {
    padding-top: 0%;
    padding-left: 10%;
  }

  .image-position-bio {
    padding-top: 7%;
    padding-bottom: 5%;
  }

  .bio {
    padding-left: 5%;
  }

  footer {
      height: 285px;
  }
}

@media screen and (max-width: 414px) {

    header {
    height: 130px;
    }

  .mobile-logo-pos {
    padding-right: 5%;
    float: right;
    height: 50px;
  }

  .nav-position {
    padding: 33% 0% 0% 0%;
  }

  .mobile-links ul {
      padding: 20% 12% 15% 12%;
      background-color: #8DB2B9;
  }

  .footer-padding {
    margin: 0px;
    padding-top: 2%;
    height: 25%;
  }

  .newsletter-button {
    font-size: 16px;
    padding: 2%;
  }

  .newsletter-mobile {
    padding-left: 28%;
  }

  .footer-form-mobile {
    padding-left: 2%;
    padding-top: 2%;
    padding-bottom: 3%;
  }

  .buy-poetry {
    padding-left: 15%;
    padding-top: 3%;
  }

  .bookshop-links {
    padding-left: 10%;
  }

  .social-footer-mobile {
    padding-left: 10%;
    padding-top: 2%;
  }

  a {
    font-size: 17px;
  }

  h2 {
    font-size: 17px;
  }

  h3 {
    font-size: 24px;
    text-align: center;
  }

  p {
    font-size: 16px;
  }

  h4 {
    font-size: 16px;
  }

  p.contact-font {
    font-size: 15px;
  }

  h2.mobile-heading {
    font-size: 20px;
  }

  .newsletter-button {
    font-size: 16px;
  }

  .subscribe-newsletter {
    padding-left: 10%;
  }

  .mobile-email {
    max-width: 3%;
  }

  .mobile-gallery {
    max-height: 250px;
    max-width: 100%;
    padding: 5% 5% 2% 2%;
    margin: 0%;
  }

  .mobile-caption {
    max-width: 100%;
  }

  .galway-po {
    padding-left: 5%;
    padding-bottom: 2%;
  }

  .image-position-bio {
    padding: 15% 0% 15% 20%;
  }

  .mobile-image-po {
    padding-left: 10%;
    padding-top: 2%;
  }

  .contact-us {
    padding-bottom: 15%;
  }

  textarea {
    box-sizing: border-box;
    width: 100%;
  }

  .mobile-label {
    padding-top: 6%;
  }
}

